# ApiToMqtt

./: .gitignore  ApiToMqtt.cpp  CMakeLists.txt  README.md
configs/: mosquitto.conf
mqtt/: pswds.txt
ssl/: ca.key  ca.srl  client.crt  client.csr  server.key
